# JaqalPaw

./: .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  PulseDefinitions.py  README.md  main.py  setup.cfg  setup.py  test.jql  test2.jql
IR/: CircuitConstructor.py  CircuitConstructorVisitor.py  GateSlice.py  PulseData.py  padding.py
benchmark/: run_benchmarks.py
bytecode/: LUTProgramming.py  binaryConversion.py  encoding_parameters.py  pulseBinarization.py  spline_mapping.py
compiler/: jaqalCompiler.py  time_ordering.py
emulator/: Arbiters.py  ByteDecoding.py  FirmwareEmulator.py  arbiters.py  uram.py
examples/: PulseDefinitions.py  ex14.py  ex3.jql  ex3.py  ex4.py  examples_iii_a.py  examples_iii_b.py  examples_iv.py  hadamard.jql  hadamard.wvf  main.py  pulse_definitions.py  test.jql  test_sk1.jaqal  test_sk1.wvf  test_std.jaqal  test_std.wvf
examples/DocumentationSamples/: ex14.jaqal  ex14.py  ex14.wvf  ex3.jaqal  ex3.py  ex3.wvf  ex4.jaqal  ex4.py  ex4.wvf  examples_iii_a.jaqal  examples_iii_a.py  examples_iii_a.wvf  examples_iii_b.jaqal  examples_iii_b.py  examples_iii_b.wvf  examples_iv.jaqal  examples_iv.py  examples_iv.wvf
examples/MSGateFrameRotations/: Exemplar_MSGateFrameRotations.jaqal  Exemplar_MSGateFrameRotations.py  Exemplar_MSGateFrameRotations.wvf  Exemplar_MSGateFrameRotations_PulseDefinitions.py
examples/ModulatedMS/: Exemplar_ModulatedMS.jaqal  Exemplar_ModulatedMS.py  Exemplar_ModulatedMS.wvf  Exemplar_ModulatedMS_Config.txt  Exemplar_ModulatedMS_PulseDefinitions.py
examples/ShamQSCOUTPulses/: ShamQSCOUTPulses.py  hadamard.jaqal  test.jaqal  test.wvf
ir/: ast_utilities.py  circuit_constructor_visitor.py  gate_slice.py  pulse_data.py
octet/: LUTProgramming.py  encodingParameters.py  intermediateRepresentations.py  jaqalCompiler.py  pulseBinarization.py
octet/HWEmulator/: Arbiters.py  ByteDecoding.py  FirmwareEmulator.py  URAM.py  pdqSpline.py
src/jaqalpaw/: _cli.py  _import.py
src/jaqalpaw/bytecode/: binary_conversion.py  encoding_parameters.py  lut_programming.py  pulse_binarization.py  spline_mapping.py
src/jaqalpaw/compiler/: jaqal_compiler.py  time_ordering.py
src/jaqalpaw/emulator/: arbiters.py  byte_decoding.py  firmware_emulator.py  pdq_spline.py  uram.py
src/jaqalpaw/ir/: ast_utilities.py  circuit_constructor.py  circuit_constructor_visitor.py  gate_slice.py  padding.py  pulse_data.py
src/jaqalpaw/spline/: spline_fitting.py
src/jaqalpaw/utilities/: datatypes.py  exceptions.py  helper_functions.py  parameters.py
src/qscout/v1/: QSCOUTBuiltins.py
src/qscout/v1/sk1/: jaqal_pulses.py
src/qscout/v1/std/: jaqal_pulses.py
tests/: backcompat.jaqal  run_benchmarks.py  test_backcompat.py  test_repro.py  test_smoke.py
tests/benchmark/: benchmark.py
