[metadata]
name = JaqalPaw
author = Daniel Lobser, Benjamin C. A. Morrison, Kenneth Rudinger, Antonio Russo, Jay Wesley Van Der Wall
author_email = qscout@sandia.gov
description = Just Another Quantum Assembly Language Pulses and Waveform Specification
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 1.1.0a0
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find_namespace:
package_dir =
    =src
install_requires = numpy; scipy; jaqalpaq>=1.1.0a0
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaw
    jaqalpaw.*
    qscout.v1.QSCOUTBuiltins
    qscout.v1.std.*
where = src

[options.extras_require]
tests = pytest
emulator = matplotlib

[options.entry_points]
console_scripts =
    jaqalpaw-emulate = jaqalpaw._cli:main

[bdist_wheel]
universal = 1
