[metadata]
name = JaqalPaw
author = Daniel Lobser, Benjamin C. A. Morrison, Kenneth Rudinger, Antonio Russo, Jay Wesley Van Der Wall
author_email = qscout@sandia.gov
description = Just Another Quantum Assembly Language Pulses and Waveform Specification
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 1.1.0a1
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find_namespace:
package_dir =
    =src
install_requires = numpy; scipy; jaqalpaq>=1.1.0a1
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaw
    jaqalpaw.*
    qscout
    qscout.*
where = src

[options.extras_require]
tests = pytest
emulator = matplotlib

[options.data_files]
share/jaqalpaw/tests =
    tests/run_benchmarks.py
    tests/test_repro.py
    tests/test_smoke.py
share/jaqalpaw/examples =
    examples/test_sk1.jaqal
    examples/test_sk1.wvf
    examples/test_std.jaqal
    examples/test_std.wvf
share/jaqalpaw/tests/benchmark =
    tests/benchmark/__init__.py
    tests/benchmark/benchmark.py
share/jaqalpaw/examples/ModulatedMS =
    examples/ModulatedMS/Exemplar_ModulatedMS.jaqal
    examples/ModulatedMS/Exemplar_ModulatedMS.py
    examples/ModulatedMS/Exemplar_ModulatedMS.wvf
    examples/ModulatedMS/Exemplar_ModulatedMS_Config.txt
share/jaqalpaw/examples/DocumentationSamples =
    examples/DocumentationSamples/ex14.jaqal
    examples/DocumentationSamples/ex14.py
    examples/DocumentationSamples/ex14.wvf
    examples/DocumentationSamples/ex3.jaqal
    examples/DocumentationSamples/ex3.py
    examples/DocumentationSamples/ex3.wvf
    examples/DocumentationSamples/ex4.jaqal
    examples/DocumentationSamples/ex4.py
    examples/DocumentationSamples/ex4.wvf
    examples/DocumentationSamples/examples_iii_a.jaqal
    examples/DocumentationSamples/examples_iii_a.py
    examples/DocumentationSamples/examples_iii_a.wvf
    examples/DocumentationSamples/examples_iii_b.jaqal
    examples/DocumentationSamples/examples_iii_b.py
    examples/DocumentationSamples/examples_iii_b.wvf
    examples/DocumentationSamples/examples_iv.jaqal
    examples/DocumentationSamples/examples_iv.py
    examples/DocumentationSamples/examples_iv.wvf
share/jaqalpaw/examples/MSGateFrameRotations =
    examples/MSGateFrameRotations/Exemplar_MSGateFrameRotations.jaqal
    examples/MSGateFrameRotations/Exemplar_MSGateFrameRotations.py
    examples/MSGateFrameRotations/Exemplar_MSGateFrameRotations.wvf

[options.entry_points]
console_scripts =
    jaqalpaw-emulate = jaqalpaw._cli:main
